[tool.poetry]
name = "caseresearch-slack"
version = "0.1.0"
description = "CAS-eResearch API for Slack"
authors = ["Gregory Poole <gbpoole@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
uvicorn = "^0.18.2"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

# Make sure the Poetry version matches what's in the Dockerfile
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
